portico: Add information on billing guests.

--- a/templates/zerver/faq.html
+++ b/templates/zerver/faq.html
@@ -66,6 +66,19 @@
             </div>
             <div class="faq">
                 <div class="question">
+                    How are guest users billed?
+                </div>
+                <p class="answer">
+                    Guests cannot see or join streams they are not invited
+                    to. Guests subscribed to more than 1 stream are billed
+                    like regular users. Guests subscribed to a single stream
+                    are generally free, unless you have more than 5 times as
+                    many single-stream guests as paying users. More details
+                    are available <a href="/help/roles-and-permissions">here</a>.
+                </p>
+            </div>
+            <div class="faq">
+                <div class="question">
                     Who can I contact if I have further questions?
                 </div>
                 <p class="answer">
