--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -256,6 +256,14 @@
             </p>
         </div>
         <div class="feature-block">
+            <h3>GUESTS</h3>
+            <p>
+                Guests cannot see or join streams unless they are explicitly
+                added. Perfect for partners, vendors, and temporary
+                contractors.
+            </p>
+        </div>
+        <div class="feature-block">
             <h3>YOUR FEATURE HERE</h3>
             <p>Zulip is open source, so if something important for
             your use case is missing, you can make it happen!</p>
