--- a/templates/zerver/plans.html
+++ b/templates/zerver/plans.html
@@ -68,7 +68,7 @@
                                     <li>Full search history</li>
                                     <li>File storage up to 10 GB per user</li>
                                     <li>Full access to enterprise features
-                                    like Google and GitHub OAuth</li>
+                                    like guest users and user groups</li>
                                     <li>Priority commercial support</li>
                                     <li>Funds the Zulip open source project</li>
                                 </ul>
