portico: Update notifications section title on /features.

--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -73,7 +73,7 @@
             <polygon points="0,0 100,0 50,50" style="fill: #fafafa;" />
             Sorry, your browser does not support inline SVG.
         </svg>
-        <h2>All the notifications you need!</h2>
+        <h2>Highly configurable notifications</h2>
 
         <div class="center">
             <div class="image-block"></div>
