portico: Add branding to /features.

--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -264,6 +264,12 @@
             </p>
         </div>
         <div class="feature-block">
+            <h3>BRANDING</h3>
+            <p>
+                Use your logo instead of Zulip's in the desktop and webapp.
+            </p>
+        </div>
+        <div class="feature-block">
             <h3>YOUR FEATURE HERE</h3>
             <p>Zulip is open source, so if something important for
             your use case is missing, you can make it happen!</p>
