--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -47,6 +47,10 @@ input:focus {
     border: 1px solid rgba(0, 0, 0, 0.4);
 }
 
+.input-group-text {
+    height: 2em;
+}
+
 blockquote p {
     font-weight: normal;
 }
