--- a/static/templates/settings/account-settings.handlebars
+++ b/static/templates/settings/account-settings.handlebars
@@ -20,7 +20,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="email_change_label">{{t "Change email" }}</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="{{t Close}}">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
@@ -42,10 +42,10 @@
             </form>
 
             {{#if page_params.two_fa_enabled }}
-                <p for="two_factor_auth" class="inline-block title">
-                    {{t "Two factor authentication" }}: {{#if page_params.two_fa_enabled_user }}{{t "Enabled" }}{{else}}{{t "Disabled" }}{{/if}}
-                    <a target="_blank" id="two_factor_auth" href="/account/two_factor/" title="{{t 'Setup two factor authentication' }}">[{{t "Setup" }}]</a>
-                </p>
+            <p for="two_factor_auth" class="inline-block title">
+                {{t "Two factor authentication" }}: {{#if page_params.two_fa_enabled_user }}{{t "Enabled" }}{{else}}{{t "Disabled" }}{{/if}}
+                <a target="_blank" id="two_factor_auth" href="/account/two_factor/" title="{{t 'Setup two factor authentication' }}">[{{t "Setup" }}]</a>
+            </p>
             {{/if}}
 
             <form class="form-horizontal full-name-change-form">
@@ -70,7 +70,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="change_full_name_modal_label">{{t "Change full name" }}</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="{{t Close}}">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
@@ -95,10 +95,10 @@
                 <div class="input-group grid inline-block ">
                     <div class="input-group ">
                         {{#if page_params.realm_email_auth_enabled}}
-                            <label class="inline-block title">{{t "Password" }}</label>
+                        <label class="inline-block title">{{t "Password" }}</label>
 
-                            <button type="button" id="pw_change_link" class="change_password_button small button rounded inline-block" data-toggle="modal" data-target="#change_password_modal" data-dismiss="modal">********<i class="fa fa-pencil"></i>
-                            </button>
+                        <button type="button" id="pw_change_link" class="change_password_button small button rounded inline-block" data-toggle="modal" data-target="#change_password_modal" data-dismiss="modal">********<i class="fa fa-pencil"></i>
+                        </button>
 
                         {{/if}}
                     </div>
@@ -108,7 +108,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="change_password_modal_label">{{t "Chang password" }}</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="{{t Close}}">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
@@ -147,11 +147,11 @@
                 <label for="user_role" class="inline-block title">{{t "Role" }}</label>
                 <button class="button small rounded">
                     {{#if page_params.is_admin}}
-                        {{t "Administrator" }}
+                    {{t "Administrator" }}
                     {{else if page_params.is_guest}}
-                        {{t "Guest" }}
+                    {{t "Guest" }}
                     {{else}}
-                        {{t "Member" }}
+                    {{t "Member" }}
                     {{/if}}
                 </button>
             </div>
@@ -169,7 +169,7 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <h5 class="modal-title" id="deactivation_self_modal_label">{{t "Deactivate your account" }}</h5>
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="{{t Close}}">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
@@ -233,12 +233,12 @@
             <div class="input-group">
                 <p class="api-key-note">
                     {{#tr this}}
-                        An API key can be used to programmatically access a Zulip account.
-                        Anyone with access to your API key has the ability to read your messages, send
-                        messages on your behalf, and otherwise impersonate you on Zulip, so you should
-                        guard your API key as carefully as you guard your password. <br />
-                        We recommend creating bots and using the bots' accounts and API keys to access
-                        the Zulip API, unless the task requires access to your account.
+                    An API key can be used to programmatically access a Zulip account.
+                    Anyone with access to your API key has the ability to read your messages, send
+                    messages on your behalf, and otherwise impersonate you on Zulip, so you should
+                    guard your API key as carefully as you guard your password. <br />
+                    We recommend creating bots and using the bots' accounts and API keys to access
+                    the Zulip API, unless the task requires access to your account.
                     {{/tr}}
                 </p>
                 <button class="button rounded" id="api_key_button">{{t "Show/change your API key" }}</button>
