--- a/static/templates/settings/bot-settings.handlebars
+++ b/static/templates/settings/bot-settings.handlebars
@@ -27,89 +27,95 @@
         </ul>
 
         <div class="tab-content" id="TabContent">
-            <div class="tab-pane fade show active" id="active" role="tabpanel" aria-labelledby="active-tab">
+            <div class="tab-pane container fade show active" id="active" role="tabpanel" aria-labelledby="active-tab">
                 <ol class="bots_list required-text" id="active_bots_list" data-empty="{{t 'You have no active bots.' }}">
                 </ol>
             </div>
 
-            <div class="tab-pane fade" id="inactive" role="tabpanel" aria-labelledby="inactive-tab">
+            <div class="tab-pane container fade" id="inactive" role="tabpanel" aria-labelledby="inactive-tab">
                 <ol class="bots_list required-text" id="inactive_bots_list" data-empty="{{t 'You have no inactive bots.' }}">
                 </ol>
             </div>
 
-            <div class="tab-pane fade" id="new_bot" role="tabpanel" aria-labelledby="add-new-bot-tab">
+            <div class="tab-pane container fade" id="new_bot" role="tabpanel" aria-labelledby="add-new-bot-tab">
                 <div id="add-a-new-bot-form_">
-                    <form id="create_bot_form" class="form-horizontal no-padding {{#unless can_create_new_bots}}hide{{/unless}}">
-                        <div class="new-bot-form">
-                            <div class="input-group">
-                                <label for="bot_type">
-                                    {{t "Bot type" }}
-                                    <i class="fa fa-question-circle settings-info-icon bot_type_tooltip" aria-hidden="true" data-toggle="tooltip" title='{{t "Incoming webhooks can only send messages." }}'></i>
-                                </label>
-                                <select name="bot_type" id="create_bot_type">
-                                    {{#each page_params.bot_types}}
-                                        {{#if this.allowed}}
-                                            <option value="{{this.type_id}}">{{this.name}}</option>
-                                        {{/if}}
-                                    {{/each}}
-                                </select>
-                            </div>
-                            <div class="input-group" id="service_name_list">
-                                <label for="select_service_name">{{t "Bot"}}</label>
-                                <select name="service_name" id="select_service_name">
-                                    {{#each page_params.realm_embedded_bots}}
-                                        <option value="{{this.name}}">{{this.name}}</option>
-                                    {{/each}}
-                                </select>
-                            </div>
-                            <div class="input-group">
-                                <label for="create_bot_name">{{t "Full name" }}</label>
-                                <input type="text" name="bot_name" id="create_bot_name" class="required" maxlength=100 placeholder="{{t 'Cookie Bot' }}" value="" />
-                                <div><label for="create_bot_name" generated="true" class="text-error"></label></div>
-                            </div>
-                            <div class="input-group">
-                                <label for="bot_short_name">{{t "Username (a-z, 0-9, and dashes only)" }}</label>
-                                <input type="text" name="bot_short_name" id="create_bot_short_name" class="required bot_local_part" placeholder="{{t 'cookie' }}" value="" />
-                                -bot@{{ page_params.realm_bot_domain }}
-                                <div>
-                                    <label for="create_bot_short_name" generated="true" class="text-error"></label>
+                    <form id="create_bot_form" class=" {{#unless can_create_new_bots}}hide{{/unless}}">
+                        <div class="row">
+                            <div class="col-xl-8">
+                                <div class="new-bot-form">
+                                    <div class="form-group">
+                                        <label class="mr-sm-2" for="bot_type">
+                                            {{t "Bot type" }}
+                                            <i class="fa fa-question-circle settings-info-icon bot_type_tooltip" aria-hidden="true" data-toggle="tooltip" title='{{t "Incoming webhooks can only send messages." }}'></i>
+                                        </label>
+                                        <select name="bot_type" id="create_bot_type">
+                                            {{#each page_params.bot_types}}
+                                                {{#if this.allowed}}
+                                                    <option value="{{this.type_id}}">{{this.name}}</option>
+                                                {{/if}}
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                    <div class="form-group" id="service_name_list">
+                                        <label  class="mr-sm-2" for="select_service_name">{{t "Bot"}}</label>
+                                        <select name="service_name" id="select_service_name">
+                                            {{#each page_params.realm_embedded_bots}}
+                                                <option value="{{this.name}}">{{this.name}}</option>
+                                            {{/each}}
+                                        </select>
+                                    </div>
+                                    <div class="form-group">
+                                        <label  class="mr-sm-2"for="create_bot_name">{{t "Full name" }}</label>
+                                        <input type="text" name="bot_name" id="create_bot_name" class="form-control required" maxlength=100 placeholder="{{t 'Cookie Bot' }}" value="" />
+                                        <div><label for="create_bot_name" generated="true" class="text-error"></label></div>
+                                    </div>
+                                    <label class="mr-sm-2" for="bot_short_name">{{t "Username (a-z, 0-9, and dashes only)" }}</label>
+                                    <div class="input-group">
+                                        <input type="text" name="bot_short_name" id="create_bot_short_name" class="form-control required bot_local_part" placeholder="{{t 'cookie' }}" value="" />
+                                        <div class="input-group-append">
+                                            <span class="input-group-text">-bot@{{ page_params.realm_bot_domain }}</span>
+                                        </div>
+                                        <div>
+                                            <label for="create_bot_short_name" generated="true" class="text-error"></label>
+                                        </div>
+                                    </div>
+                                    <div id="payload_url_inputbox">
+                                        <div class="form-group">
+                                            <label class="mr-sm-2" for="create_payload_url">{{t "Endpoint URL" }}</label>
+                                            <input type="text" name="payload_url" id="create_payload_url" maxlength=2083 placeholder="https://hostname.example.com" value="" class="form-control" />
+                                            <div><label for="create_payload_url" generated="true" class="text-error"></label></div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="mr-sm-2" for="interface_type">{{t "Outgoing webhook message format" }}</label>
+                                            <select name="interface_type" id="create_interface_type">
+                                                <option value="1">Zulip</option>
+                                                <option value="2">{{t "Slack compatible" }}</option>
+                                            </select>
+                                            <div><label for="create_interface_type" generated="true" class="text-error"></label></div>
+                                        </div>
+                                    </div>
+                                    <div id="config_inputbox">
+                                        {{#each page_params.realm_embedded_bots as |bot index|}}
+                                            {{#each bot.config as |config_value config_key|}}
+                                                {{partial "embedded_bot_config_item" "botname" bot.name "key" config_key "value" config_value}}
+                                            {{/each}}
+                                        {{/each}}
+                                    </div>
+                                    <div class="form-group">
+                                        <div id="bot_avatar_file"></div>
+                                        <input type="file" name="bot_avatar_file_input" class=" form-control notvisible" id="bot_avatar_file_input" value="{{t 'Upload avatar' }}" />
+                                        <button class="button white rounded small btn-danger display-none" id="bot_avatar_clear_button">{{t "Clear avatar" }}</button>
+                                        <button class="button white rounded" id="bot_avatar_upload_button">{{t "Customize avatar" }}</button> ({{t "Optional" }})
+                                    </div>
+                                    <p>
+                                        <div id="bot_avatar_file_input_error" class="text-error"></div>
+                                    </p>
+                                    <button type="submit" class="button white rounded sea-green" id="create_bot_button">
+                                        {{t 'Create bot' }}
+                                    </button>
+                                    <div class="create_bot_spinner"></div>
                                 </div>
                             </div>
-                            <div id="payload_url_inputbox">
-                                <div class="input-group">
-                                    <label for="create_payload_url">{{t "Endpoint URL" }}</label>
-                                    <input type="text" name="payload_url" id="create_payload_url" maxlength=2083 placeholder="https://hostname.example.com" value="" />
-                                    <div><label for="create_payload_url" generated="true" class="text-error"></label></div>
-                                </div>
-                                <div class="input-group">
-                                    <label for="interface_type">{{t "Outgoing webhook message format" }}</label>
-                                    <select name="interface_type" id="create_interface_type">
-                                        <option value="1">Zulip</option>
-                                        <option value="2">{{t "Slack compatible" }}</option>
-                                    </select>
-                                    <div><label for="create_interface_type" generated="true" class="text-error"></label></div>
-                                </div>
-                            </div>
-                            <div id="config_inputbox">
-                                {{#each page_params.realm_embedded_bots as |bot index|}}
-                                    {{#each bot.config as |config_value config_key|}}
-                                        {{partial "embedded_bot_config_item" "botname" bot.name "key" config_key "value" config_value}}
-                                    {{/each}}
-                                {{/each}}
-                            </div>
-                            <div class="input-group">
-                                <div id="bot_avatar_file"></div>
-                                <input type="file" name="bot_avatar_file_input" class="notvisible" id="bot_avatar_file_input" value="{{t 'Upload avatar' }}" />
-                                <button class="button white rounded small btn-danger display-none" id="bot_avatar_clear_button">{{t "Clear avatar" }}</button>
-                                <button class="button white rounded" id="bot_avatar_upload_button">{{t "Customize avatar" }}</button> ({{t "Optional" }})
-                            </div>
-                            <p>
-                                <div id="bot_avatar_file_input_error" class="text-error"></div>
-                            </p>
-                            <button type="submit" class="button white rounded sea-green" id="create_bot_button">
-                                {{t 'Create bot' }}
-                            </button>
-                            <div class="create_bot_spinner"></div>
                         </div>
                     </form>
                 </div>
