--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -100,7 +100,7 @@
             {% include "zerver/app/left_sidebar.html" %}
         </div>
         <div class="column-middle">
-            <div class="column-middle-inner tab-content">
+            <div class="column-middle-inner">
                 <div class="tab-pane active" id="home">
                     <div class="fixed-app" id="floating_recipient_bar">
                         <div class="app-main recipient_bar_content">
@@ -132,7 +132,7 @@
                     {% include "zerver/app/debug.html" %}
                 </div>
                 {% endif %}
-            </div><!--/tab-content-->
+            </div>
         </div>
         <div class="column-right">
             {% include "zerver/app/right_sidebar.html" %}
