user status: Add a maxlength to the input field.
This avoids an annoying bug where trying to save a too-long status
makes the save button appear to do nothing.

--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -154,7 +154,7 @@
         <div class="overlay-content modal-bg">
             <div class="user_status_change_title">Set a status message</div>
             <div>
-                <input type="text" class="user_status" />
+                <input type="text" class="user_status" maxlength="60"/>
                 <button class="sea-green rounded button set_user_status">
                     Save
                 </button>
