--- a/templates/zerver/app/compose.html
+++ b/templates/zerver/app/compose.html
@@ -88,9 +88,9 @@
                         <div>
                             <div class="messagebox">
                                 <textarea class="new_message_textarea" name="content" id='compose-textarea' placeholder="{{ _('Compose your message here') }}" tabindex="0" maxlength="10000" aria-label="{{ _('Compose your message here...') }}"></textarea>
-                                <div class="scrolling_list" id="preview_message_area" style="display:none;">
+                                <div class="scrolling_list preview_message_area" id="preview_message_area" style="display:none;">
                                     <div id="markdown_preview_spinner"></div>
-                                    <div id="preview_content"></div>
+                                    <div id="preview_content" class="preview_content"></div>
                                 </div>
                                 <div class="drag"></div>
                                 <div id="below-compose-content">
