hotspots: Add hotspot for gear menu.

--- a/static/styles/hotspots.scss
+++ b/static/styles/hotspots.scss
@@ -240,7 +240,8 @@
 
 /* individual icon z-indexing */
 #hotspot_intro_streams_icon,
-#hotspot_intro_topics_icon {
+#hotspot_intro_topics_icon,
+#hotspot_intro_gear_icon {
     z-index: 103;
 }
 
