user status: Style status message in user popover.

--- a/static/styles/popovers.scss
+++ b/static/styles/popovers.scss
@@ -334,3 +334,8 @@ ul.remind_me_popover .remind_icon {
     font-size: small;
     text-align: justify;
 }
+
+.user_info_status_text {
+    opacity: 0.8;
+    padding: 2px 0px 3px 0px;
+}
