--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -191,10 +191,14 @@ li.active-sub-filter {
 /* Starred messaged counts aren't really unread
    counts, so we style them differently.
 */
-.top_left_starred_messages {
+.top_left_starred_messages .count {
     background-color: transparent;
-    border-width: 0;
+    border-width: 1px;
+    border-style: solid;
     color: inherit;
+    padding-left: 3px;
+    padding-right: 3px;
+    border-color: hsl(105, 2%, 50%);
 }
 
 /* These are true "unread" counts. */
