--- a/templates/zerver/app/invite_user.html
+++ b/templates/zerver/app/invite_user.html
@@ -12,6 +12,7 @@
                     <label class="control-label" for="invitee_emails">{{ _('Emails (one on each line or comma-separated)') }}</label>
                     <div class="controls">
                         <textarea rows="2" id="invitee_emails" name="invitee_emails" placeholder="{{ _('One or more email addresses...') }}"></textarea>
+                        {% if is_admin %}
                         <div id="invite-method-choice">
                             {{ _('or') }} <a id="generate_multiuse_invite_button">{{ _('Generate invite link') }}</a>
                         </div>
@@ -22,6 +23,7 @@
                                 {{ _('Generate invite link') }}
                             </label>
                         </div>
+                        {% endif %}
                     </div>
                 </div>
                 <hr>
