org settings: Update explanation for Default user settings.

--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -150,7 +150,7 @@
                 <h3>{{t "Default user settings" }}</h3>
                 {{ partial "settings-save-discard-widget" "section_name" "user-defaults" }}
             </div>
-            <p>{{t "Configure default settings for new users joining this organization." }}</p>
+            <p>{{t "Default settings for new users joining this organization." }}</p>
             <div class="inline-block organization-settings-parent">
                 <div class="input-group">
                     <label for="realm_default_language" class="dropdown-title">{{t "Default language" }}:</label>
