--- a/static/templates/settings/account-settings.handlebars
+++ b/static/templates/settings/account-settings.handlebars
@@ -126,7 +126,7 @@
 
             <div class="user-role input-group grid">
                 <label for="user_role" class="inline-block title">{{t "Role" }}</label>
-                <button class="button small rounded">
+                <span>
                     {{#if page_params.is_admin}}
                     {{t "Administrator" }}
                     {{else if page_params.is_guest}}
@@ -134,7 +134,7 @@
                     {{else}}
                     {{t "Member" }}
                     {{/if}}
-                </button>
+                </span>
             </div>
 
             <form class="deactivate_account grid">
