--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -154,10 +154,45 @@
 
         <div id="org-msg-feed" class="org-subsection-parent">
             <div class="subsection-header">
-                <h3>{{t "Message feed" }}</h3>
+                <h3>{{t "Other settings" }}</h3>
                 {{ partial "settings-save-discard-widget" "section_name" "msg-feed" }}
             </div>
             <div class="inline-block organization-settings-parent">
+                <div class="input-group">
+                    <label for="realm_video_chat_provider" class="dropdown-title">
+                        {{t 'Video chat provider' }}
+                    </label>
+                    <select name="realm_video_chat_provider" id="id_realm_video_chat_provider">
+                        {{#each realm_available_video_chat_providers}}
+                        <option value='{{this}}'>{{this}}</option>
+                        {{/each}}
+                    </select>
+                    <div id="google_hangouts_domain">
+                        <label>{{t 'Domain for your <a href="https://gsuite.google.com" target="_blank">G Suite team</a> (required)' }}:</label>
+                        <input type="text" id="id_realm_google_hangouts_domain"
+                          name="realm_google_hangouts_domain"
+                          class="admin-realm-google-hangouts-domain"/>
+                    </div>
+                    <div id="zoom_user_id" class="zoom_credentials">
+                        <label>{{t 'Zoom user ID (required)' }}:</label>
+                        <input type="text" id="id_realm_zoom_user_id"
+                          name="realm_zoom_user_id"
+                          class="admin-realm-zoom-field"/>
+                    </div>
+                    <div id="zoom_api_key" class="zoom_credentials">
+                        <label>{{t 'Zoom API key (required)' }}:</label>
+                        <input type="text" id="id_realm_zoom_api_key"
+                          name="realm_zoom_api_key"
+                          class="admin-realm-zoom-field"/>
+                    </div>
+                    <div id="zoom_api_secret" class="zoom_credentials">
+                        <label>{{t 'Zoom API secret (required)' }}:</label>
+                        <input type="text" id="id_realm_zoom_api_secret"
+                          name="realm_zoom_api_secret"
+                          class="admin-realm-zoom-field"/>
+                    </div>
+                </div>
+
                 {{#if false}}
                 <div class="input-group">
                     <label for="realm_message_retention_days"
@@ -191,46 +226,6 @@
                   "is_checked" realm_inline_url_embed_preview
                   "label" admin_settings_label.realm_inline_url_embed_preview}}
                 {{/if}}
-            </div>
-        </div>
-
-        <div id="org-video-chat" class="org-subsection-parent">
-            <div class="subsection-header">
-                <h3>{{t "Video chat provider" }}</h3>
-                {{ partial "settings-save-discard-widget" "section_name" "video-chat" }}
-            </div>
-            <div class="inline-block organization-settings-parent">
-                <div class="input-group">
-                    <select name="realm_video_chat_provider" id="id_realm_video_chat_provider">
-                        {{#each realm_available_video_chat_providers}}
-                        <option value='{{this}}'>{{this}}</option>
-                        {{/each}}
-                    </select>
-                    <div id="google_hangouts_domain">
-                        <label>{{t 'Domain for your <a href="https://gsuite.google.com" target="_blank">G Suite team</a> (required)' }}:</label>
-                        <input type="text" id="id_realm_google_hangouts_domain"
-                          name="realm_google_hangouts_domain"
-                          class="admin-realm-google-hangouts-domain"/>
-                    </div>
-                    <div id="zoom_user_id" class="zoom_credentials">
-                        <label>{{t 'Zoom user ID (required)' }}:</label>
-                        <input type="text" id="id_realm_zoom_user_id"
-                          name="realm_zoom_user_id"
-                          class="admin-realm-zoom-field"/>
-                    </div>
-                    <div id="zoom_api_key" class="zoom_credentials">
-                        <label>{{t 'Zoom API key (required)' }}:</label>
-                        <input type="text" id="id_realm_zoom_api_key"
-                          name="realm_zoom_api_key"
-                          class="admin-realm-zoom-field"/>
-                    </div>
-                    <div id="zoom_api_secret" class="zoom_credentials">
-                        <label>{{t 'Zoom API secret (required)' }}:</label>
-                        <input type="text" id="id_realm_zoom_api_secret"
-                          name="realm_zoom_api_secret"
-                          class="admin-realm-zoom-field"/>
-                    </div>
-                </div>
             </div>
         </div>
     </form>
