org settings: Remove unnecessary titles from Organization settings.

--- a/static/templates/settings/organization-settings-admin.handlebars
+++ b/static/templates/settings/organization-settings-admin.handlebars
@@ -83,8 +83,7 @@
             </div>
 
             <div class="input-group">
-                <label for="realm_notifications_stream" id="realm_notifications_stream_label" class="inline-block"
-                  title="{{t 'The stream to which new stream notifications go to.' }}">
+                <label for="realm_notifications_stream" id="realm_notifications_stream_label" class="inline-block">
                     {{t "New stream notifications:" }}
                     <span class="dropup actual-dropdown-menu" id="id_realm_notifications_stream"
                       name="realm_notifications_stream" aria-labelledby="realm_notifications_stream_label">
@@ -106,8 +105,7 @@
             </div>
 
             <div class="input-group">
-                <label for="realm_signup_notifications_stream" id="realm_signup_notifications_stream_label" class="inline-block"
-                  title="{{t 'The stream which new user signup notifications go to.' }}">
+                <label for="realm_signup_notifications_stream" id="realm_signup_notifications_stream_label" class="inline-block">
                     {{t "New user notifications:" }}
                     <span class="dropup actual-dropdown-menu" id="id_realm_signup_notifications_stream"
                       name="realm_signup_notifications_stream" aria-labelledby="realm_signup_notifications_stream_label">
