css: Add explicit padding below the navbar.
We have always intended to have 10px of whitespace
below the navbar, and this enforces it directly
and explicitly in the CSS.

Note that the three major panels still should
have a margin of 50px, which is equal to
the safe outer height of the header (40px + 10px).

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -187,8 +187,13 @@ p.n-margin {
     position: fixed;
     z-index: 102; /* Needs to be higher than .alert-bar-container */
     width: 100%;
-    border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
     height: 40px;
+    padding-bottom: 10px;
+    background-color: inherit;
+}
+
+#top_navbar {
+    border-bottom: 1px solid hsla(0, 0%, 0%, 0.2);
 }
 
 #panels {
