emails: Remove newlines from translated strings in email templates.
Fixes #11390.

--- a/templates/zerver/emails/notify_new_login.source.html
+++ b/templates/zerver/emails/notify_new_login.source.html
@@ -1,7 +1,7 @@
 {% extends "zerver/emails/compiled/email_base_default.html" %}
 
 {% block preheader %}
-    {% trans organization_url=realm_uri %}Organization: {{ organization_url }} Time: {{ login_time }} Email: {{ user_email }} {% endtrans %}
+    {% trans organization_url=realm_uri %}Organization: {{ organization_url }} Time: {{ login_time }} Email: {{ user_email }}{% endtrans %}
 {% endblock %}
 
 {% block illustration %}
@@ -12,25 +12,20 @@
 <p>{{ _("We noticed a recent login for the following Zulip account.") }}</p>
 <p>
     <ul>
-        <li>{% trans %}
-            Organization: <a href="{{ realm_uri }}" target="_blank">{{ realm_uri }}</a>
-            {% endtrans %}
+        <li>
+            {% trans %}Organization: <a href="{{ realm_uri }}" target="_blank">{{ realm_uri }}</a>{% endtrans %}
         </li>
-        <li>{% trans %}
-            Email: <a href="mailto:{{ user_email }}" target="_blank">{{ user_email }}</a>
-            {% endtrans %}
+        <li>
+            {% trans %}Email: <a href="mailto:{{ user_email }}" target="_blank">{{ user_email }}</a>{% endtrans %}
         </li>
-        <li>{% trans %}
-            Time: {{ login_time }}
-            {% endtrans %}
+        <li>
+            {% trans %}Time: {{ login_time }}{% endtrans %}
         </li>
-        <li>{% trans %}
-            Device: {{ device_browser }} on {{ device_os }}.
-            {% endtrans %}
+        <li>
+            {% trans %}Device: {{ device_browser }} on {{ device_os }}.{% endtrans %}
         </li>
-        <li>{% trans %}
-            IP address: {{ device_ip }}
-            {% endtrans %}
+        <li>
+            {% trans %}IP address: {{ device_ip }}{% endtrans %}
         </li>
     </ul>
 </p>
@@ -38,11 +33,7 @@
 <p>{{ _("If this was you, great! There's nothing else you need to do.") }}</p>
 
 <p>
-    {% trans %}
-    If you do not recognize this login, or think your account may have been compromised, please
-    <a href="{{ realm_uri }}/accounts/password/reset/" target="_blank">reset your password</a>
-    or contact us immediately at <a href="mailto:{{ support_email }}">{{ support_email }}</a>.
-    {% endtrans %}
+    {% trans %}If you do not recognize this login, or think your account may have been compromised, please <a href="{{ realm_uri }}/accounts/password/reset/" target="_blank">reset your password</a> or contact us immediately at <a href="mailto:{{ support_email }}">{{ support_email }}</a>.{% endtrans %}
 </p>
 
 <p>
