--- a/templates/zerver/emails/password_reset.source.html
+++ b/templates/zerver/emails/password_reset.source.html
@@ -6,9 +6,7 @@
 
 {% block content %}
     <p>
-        {% trans %}
-        Somebody (possibly you) requested a new password for the Zulip account {{ email }} on {{ realm_uri }}.
-        {% endtrans %}
+        {% trans %}Somebody (possibly you) requested a new password for the Zulip account {{ email }} on {{ realm_uri }}.{% endtrans %}
     </p>
     {% if active_account_in_realm %}
     <p>
@@ -18,15 +16,9 @@
     {% else %}
     <p>
         {% if user_deactivated %}
-            {% trans %}
-            You previously had an account on {{ realm_uri }}, but it has been deactivated.
-            You can contact an organization administrator to
-            <a href="{{ realm_uri }}/help/deactivate-or-reactivate-a-user">reactivate your account</a>.
-            {% endtrans %}
+            {% trans %}You previously had an account on {{ realm_uri }}, but it has been deactivated. You can contact an organization administrator to <a href="{{ realm_uri }}/help/deactivate-or-reactivate-a-user">reactivate your account</a>.{% endtrans %}
         {% else %}
-            {% trans %}
-            You do not have an account in that Zulip organization.
-            {% endtrans %}
+            {% trans %}You do not have an account in that Zulip organization.{% endtrans %}
         {% endif %}
     </p>
     <p>
@@ -37,14 +29,12 @@
                 <li>{{ active_account.realm.uri }}</li>
                 {% endfor %}
             </ul>
-            {% trans %}
-            You can try logging in or resetting your password in the organization(s) above.
-            {% endtrans %}
+            {% trans %}You can try logging in or resetting your password in the organization(s) above.{% endtrans %}
         {% endif %}
     </p>
     {% endif %}
 
-    {% trans %}
-    If you do not recognize this activity, you can safely ignore this email.
-    {% endtrans %}
+    <p>
+        {% trans %}If you do not recognize this activity, you can safely ignore this email.{% endtrans %}
+    </p>
 {% endblock %}
