--- a/templates/zerver/emails/confirm_registration.source.html
+++ b/templates/zerver/emails/confirm_registration.source.html
@@ -12,11 +12,5 @@
     {{ _('Click the button below to complete registration.') }}
     <a class="button" href="{{ activate_url }}">{{ _('Complete registration') }}</a>
 </p>
-<p>
-    {% trans %}
-    Contact us any time at
-    <a href="mailto:{{ support_email }}">{{ support_email }}</a>
-    if you run into trouble, have any feedback, or just want to chat!
-    {% endtrans %}
-</p>
+<p>{% trans %}Contact us any time at <a href="mailto:{{ support_email }}">{{ support_email }}</a> if you run into trouble, have any feedback, or just want to chat!{% endtrans %}</p>
 {% endblock %}
