--- a/templates/zerver/emails/find_team.source.html
+++ b/templates/zerver/emails/find_team.source.html
@@ -5,14 +5,9 @@
 {% endblock %}
 
 {% block content %}
-<p>
-    {% trans %}
-    Hi {{ user_name }},
-    {% endtrans %}
-</p>
+<p>{% trans %}Hi {{ user_name }},{% endtrans %}</p>
 
-<p>{% trans %}You can log in to your Zulip organization, {{ realm_name }},
-at the following link:{% endtrans %}</p>
+<p>{% trans %}You can log in to your Zulip organization, {{ realm_name }}, at the following link:{% endtrans %}</p>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
     <tr>
@@ -24,8 +19,7 @@ at the following link:{% endtrans %}</p>
 
 <p>{% trans %}The email address associated with your account is {{ email }}.{% endtrans %}</p>
 
-<p>{% trans %}If you have trouble logging in, please contact Zulip support by replying to
-this email.{% endtrans %}</p>
+<p>{% trans %}If you have trouble logging in, please contact Zulip support by replying to this email.{% endtrans %}</p>
 
 <p>{{ _("Thanks for using Zulip!") }}</p>
 {% endblock %}
