--- a/templates/zerver/emails/followup_day1.source.html
+++ b/templates/zerver/emails/followup_day1.source.html
@@ -9,13 +9,9 @@
 
 <p>
     {% if realm_creation %}
-        {% trans %}
-        You've created the new Zulip organization <b>{{ realm_name }}</b>.
-        {% endtrans %}
+        {% trans %}You've created the new Zulip organization <b>{{ realm_name }}</b>.{% endtrans %}
     {% else %}
-        {% trans %}
-        You've joined the Zulip organization <b>{{ realm_name }}</b>.
-        {% endtrans %}
+        {% trans %}You've joined the Zulip organization <b>{{ realm_name }}</b>.{% endtrans %}
     {% endif %}
 </p>
 
@@ -31,22 +27,14 @@
     {% else %}
         <li>{{ _('Email:') }} {{ email }}<br/></li>
     {% endif %}
-    {% trans %}
-    (you'll need these to sign in to the <a href="https://zulipchat.com/apps">mobile and desktop</a> apps)
-    {% endtrans %}
+    {% trans %}(you'll need these to sign in to the <a href="https://zulipchat.com/apps">mobile and desktop</a> apps){% endtrans %}
 </p>
 
 <p>
     {% if is_realm_admin %}
-        {% trans %}
-        Check out our <a href="{{ getting_started_link }}">guide for admins</a>, become a Zulip pro with a
-        few <a href="{{ keyboard_shortcuts_link }}">keyboard shortcuts</a>, or <a href="{{ realm_uri }}">dive right in</a>!
-        {% endtrans %}
+        {% trans %}Check out our <a href="{{ getting_started_link }}">guide for admins</a>, become a Zulip pro with a few <a href="{{ keyboard_shortcuts_link }}">keyboard shortcuts</a>, or <a href="{{ realm_uri }}">dive right in</a>!{% endtrans %}
     {% else %}
-        {% trans %}
-        <a href="{{ getting_started_link }}">Learn more</a> about Zulip, become a pro with a few
-        <a href="{{ keyboard_shortcuts_link }}">keyboard shortcuts</a>, or <a href="{{ realm_uri }}">dive right in</a>!
-        {% endtrans %}
+        {% trans %}<a href="{{ getting_started_link }}">Learn more</a> about Zulip, become a pro with a few <a href="{{ keyboard_shortcuts_link }}">keyboard shortcuts</a>, or <a href="{{ realm_uri }}">dive right in</a>!{% endtrans %}
     {% endif %}
 </p>
 
@@ -56,11 +44,6 @@
 </p>
 
 <p>
-    {% trans %}
-    PS: Follow us on <a href="https://twitter.com/zulip">Twitter</a>,
-    star us on <a href="https://github.com/zulip/zulip">GitHub</a>, or
-    chat with us live on the
-    <a href="https://chat.zulip.org">Zulip community server</a>!
-    {% endtrans %}
+    {% trans %}PS: Follow us on <a href="https://twitter.com/zulip">Twitter</a>, star us on <a href="https://github.com/zulip/zulip">GitHub</a>, or chat with us live on the <a href="https://chat.zulip.org">Zulip community server</a>!{% endtrans %}
 </p>
 {% endblock %}
