message_list: Rename show_date to group_date_divider_html.
This is much more clear about what this actually means.

--- a/static/templates/archive_message_group.handlebars
+++ b/static/templates/archive_message_group.handlebars
@@ -2,7 +2,7 @@
     {{#with this}}
 
         {{#if show_date_separator}}
-        <div class="date_row no-select">{{{show_date}}}</div>
+        <div class="date_row no-select">{{{group_date_divider_html}}}</div>
         {{/if}}
 
         <div class="recipient_row">
