--- a/static/templates/message_group.handlebars
+++ b/static/templates/message_group.handlebars
@@ -4,7 +4,7 @@
     {{#with this}}
 
         {{#if show_date_separator}}
-        <div class="date_row no-select">{{{show_date}}}</div>
+        <div class="date_row no-select">{{{group_date_divider_html}}}</div>
         {{/if}}
 
         {{#if bookend_top}}
