message_list: Rename show_date_separator to show_group_date_divider.

--- a/static/templates/archive_message_group.handlebars
+++ b/static/templates/archive_message_group.handlebars
@@ -1,7 +1,7 @@
 {{#each message_groups}}
     {{#with this}}
 
-        {{#if show_date_separator}}
+        {{#if show_group_date_divider}}
         <div class="date_row no-select">{{{group_date_divider_html}}}</div>
         {{/if}}
 
