message_list: Don't split message groups for a date divider.
This adds date dividers within a single message group when the only
reason we had previously been splitting apart two message groups is a
change of date.  The overall effect is a cleaner message list user
experience.

The downside of this change would be that the recipient bars no longer
will always show a new date for date changes; to fix that, we rewrite
how the floating recipient bars both set the date field on the
floating recipient bar itself, as well as ensure that non-floating
recipient bars don't show duplicate dates.

In a future design update where we modify how message recipient bars
look, we may very well be able to simplify this logic by removing some
of the dynamic nature of the recipient bar calculations.  But this is
a good implementation of what remains.

Tweaked significantly by tabbott from Steve Howell's original, both to
extract these changes from a larger PR as well as to modify the
first_visible_message logic to handle some tricky corner cases.

Fixes #10171.

--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -845,14 +845,6 @@ td.pointer {
     display: none;
 }
 
-/*
-   used to override .hide-date when floating_recipient_bar just begins to
-   overlap the top-most recipient_bar
-*/
-.recipient_row_date.temp-show-date {
-    display: block !important;
-}
-
 .floating_recipient .recipient_row_date.hide-date {
     display: block;
 }
@@ -1063,7 +1055,7 @@ td.pointer {
     border-right: 1px solid hsl(0, 0%, 88%);
 }
 
-.mention .messagebox {
+.mention .messagebox-content {
     background-color: hsl(8, 94%, 94%);
 }
 
