refactor: Rename bottom_sidebar to narrows_panel.
The name `bottom_sidebar` was misleading, because it
includes the entire "normal" left sidebar.

It includes the 4 narrow links at the top plus the
stream/topic list.

We now call is narrows_panel.

Note that the left sidebar sometimes also includes
the user list (with a display setting turned on).

And it will eventually include other views.

We also remove an intermediate value in the resize
calculations.

--- a/static/styles/media.scss
+++ b/static/styles/media.scss
@@ -204,7 +204,7 @@
         padding-right: 10px;
     }
 
-    .column-left.expanded .bottom_sidebar {
+    .column-left.expanded .narrows_panel {
         margin-top: 10px;
     }
 
