--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -1,5 +1,5 @@
 <div class="left-sidebar" id="left-sidebar" role="navigation">
-    <div class="bottom_sidebar">
+    <div class="narrows_panel">
         <ul id="global_filters" class="filters">
             {# Special-case this link so we don't actually go to page top. #}
             <li class="top_left_all_messages global-filter active-filter" title="{{ _('All messages') }} (Esc)">
