user_settings: Directly send password reset email.
This sends a password reset link to the user's current email
instead of redirecting them to another page.
An option to resend the link is also added.

Fixes: #6342

Fixes error of lint

user_settinngs: Directly send password reset mail.

user_settings: Fixes lint error.

Fix inline CSS
Fix for translation
Use hide instead of "display: none"

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -69,6 +69,18 @@ label {
     margin: 6px 0px 0px 0px;
 }
 
+.new-style #account-settings .loading_indicator_spinner {
+    display: inline-block;
+    width: 32px;
+    height: 15px;
+    float: none;
+    margin-top: 0;
+}
+
+#account-settings #change_password_modal {
+    padding-right: 3px;
+}
+
 .new-style .button ul {
     text-align: left;
 }
