left sidebar: Clean up "split" list moves.
This change only impacts users who have the setting
to put the user lists in the left sidebar when they
have a narrow window.

First, we move ".right-sidebar-items" as an entire
group.

Second, we append the items to "#left-sidebar"
instead of ".narrows_panel".

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -220,7 +220,7 @@
     margin-right: 10px;
 }
 
-.sidebar-items:first-of-type #userlist-header {
+.right-sidebar-items:first-of-type #userlist-header {
     border-top: none;
 }
 
