--- a/templates/zerver/app/right_sidebar.html
+++ b/templates/zerver/app/right_sidebar.html
@@ -1,5 +1,5 @@
 <div class="right-sidebar" id="right-sidebar" role="navigation">
-    <div class="sidebar-items">
+    <div class="right-sidebar-items">
         {% if enable_feedback %}
         <div id="feedback_section" class="new-style">
             <button type="button" class="button small rounded" id="feedback_button">
