css: Limit scope of filter-icon css.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -120,7 +120,7 @@ li.active-sub-filter {
     position: relative;
 }
 
-#left-sidebar .filter-icon {
+#global_filters .filter-icon {
     display: inline-block;
     width: 18px;
     text-align: center;
