css: Simplify selector for conversation partners.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -147,7 +147,7 @@ li.active-sub-filter {
     display: block;
 }
 
-.left-sidebar li a.conversation-partners:hover {
+a.conversation-partners:hover {
     text-decoration: underline;
 }
 
