help: Rename and update at-mention-a-team-member.

--- a/templates/zerver/app/home.html
+++ b/templates/zerver/app/home.html
@@ -136,7 +136,7 @@
 
         <p>
             {% trans %}
-            Learn more about mentions <a href="/help/at-mention-a-team-member">
+            Learn more about mentions <a href="/help/at-mention-a-user">
             here</a>.
             {% endtrans %}
         </p>
